tests/files/flow_controller_tests/should_run/054.cmdr
x = 10.0;
print log(x);