tests/files/flow_controller_tests/should_fail/073.cmdr
x = true;
print sech(x);